fix overflow by x

--- a/client/src/components/Board/index.css
+++ b/client/src/components/Board/index.css
@@ -14,7 +14,7 @@
   text-decoration: none;
   display: block;
   height: 100%;
-  width: 100%;
+  width: 350px;
 }
 
 .board button {
