--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,3 +17,7 @@ html, body {
   height: 100%;
   font-family: 'Roboto', sans-serif;
 }
+
+html {
+  width: 100%;
+}
